# Tauri-Prisma

./: .gitignore  Cargo.toml  README.md  package.json
prisma/: schema.prisma
src/: main.rs  prisma.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/prisma/: dev.db  schema.prisma
src-tauri/prisma-cli/: Cargo.toml
src-tauri/prisma/migrations/20240602181125_initialize_table/: migration.sql
src-tauri/src/: main.rs
src-tauri/src/lib/: tauri_commands.rs
src/app/(root)/: page.tsx
src/lib/: domain.rs  mod.rs
src/types/: bindings.ts
